<resources>
    <string name="app_name">SM1718_G05_PRACTICA1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login_title">Práctica 1</string>
    <string name="fragment_login_description">Servicios Móviles. Grado en Ingeniería Telemática, curso 2017/2018</string>
    <string name="fragment_login_user">Usuario</string>
    <string name="fragment_login_contraseña">Contraseña</string>
    <string name="fragment_escrito_contraseña">Contraseña</string>
    <string name="fragment_login_Direccion">Direccion_IP</string>
    <string name="fragment_login_Port">Puerto</string>
    <string name="fragment_login_button">CONECTAR</string>
    <string name="activity_service_text">Actividad 2</string>
</resources>
